# kigen

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
cmake/: chk.cmake
include/chk/core/: color.h  fmt.h  log.h  math.h  types.h  vec.h
include/chk/launcher/: input.h  launcher.h  palette.h  timer.h
src/chk/core/: color.c  fmt.c  log.c  math.c  vec.c
src/chk/kigen/: main.c
src/chk/launcher/: input.c  launcher.c  palette.c  timer.c
